# Inquiro

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
inquiro/: __init__.py
inquiro/agents/: __init__.py  base.py  search_agent.py  synthesis_agent.py
inquiro/api/: __init__.py  app.py  dependencies.py  evolution_router.py  preflight.py  router.py  schemas.py  task_store.py
inquiro/configs/: ensemble.yaml  evaluation_modes.yaml  llm_providers.yaml  mcp_servers.yaml  service.yaml
inquiro/core/: __init__.py  aggregation.py  canonical_hash.py  discovery_loop.py  evidence_condenser.py  evidence_metadata.py  evidence_pipeline.py  evidence_pool.py  evidence_splitter.py  gap_analysis.py  llm_coverage_judge.py  llm_utils.py  metadata_enricher.py  query_strategy.py  runner.py  trajectory_utils.py  types.py
inquiro/evolution/: __init__.py  collector.py  discovery_collector.py  enricher.py  extractor.py  fitness.py  insight_extractor.py  mechanism_config.py  metrics.py  ranker.py  scheduler.py  store.py  store_factory.py  types.py  unified_provider.py
inquiro/exps/: __init__.py  analysis_exp.py  base_exp.py  discovery_synthesis_exp.py  evolution_helper.py  parallel_search_exp.py  perspective_commentary_exp.py  search_exp.py  synthesis_exp.py
inquiro/infrastructure/: __init__.py  bedrock_llm.py  cancellation.py  circuit_breaker.py  config_loader.py  cost_tracker.py  degradation.py  errors.py  event_emitter.py  evidence_filter.py  evidence_memory.py  llm_pool.py  logging_config.py  logging_context.py  mcp_pool.py  mcp_response_cache.py  metrics.py  mode_resolver.py  persistent_connection.py  quality_gate.py  result_cache.py  run_dir.py  skill_service.py  skill_tracker.py  tool_effectiveness.py  tool_routing.py  tracing.py  url_utils.py
inquiro/prompts/: __init__.py  analysis_system.md  analysis_user.md  contrastive_extraction.md  coverage_judge_system.md  discovery_synthesis_system.md  discovery_synthesis_user.md  loader.py  principle_distillation.md  round_reflection.md  search_system.md  search_user.md  section_builder.py  synthesis_system.md  synthesis_user.md
(+111 files in other folders)
